Initial commit from CatHacks

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -9,9 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start due to an error with the 'pyzmq' module. Consider re-installing this module.\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresPyzmq'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torch.utils.data import Dataset\n",
@@ -22,9 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start due to an error with the 'pyzmq' module. Consider re-installing this module.\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresPyzmq'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "\n",
@@ -91,24 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 -1\n",
-      "0 -1\n",
-      "1 -1\n",
-      "0 -1\n",
-      "0 -1\n",
-      "0 0\n",
-      "0 0\n",
-      "0 0\n",
-      "0 0\n",
-      "0 1\n",
-      "1 1\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start due to an error with the 'pyzmq' module. Consider re-installing this module.\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresPyzmq'>here</a> for more info."
      ]
     }
    ],
@@ -123,14 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of parameters: 0.09M\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start due to an error with the 'pyzmq' module. Consider re-installing this module.\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresPyzmq'>here</a> for more info."
      ]
     }
    ],
@@ -147,14 +161,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "running on device cuda\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start due to an error with the 'pyzmq' module. Consider re-installing this module.\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresPyzmq'>here</a> for more info."
      ]
     }
    ],
@@ -171,33 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iter_dt 0.00ms; iter 0: train loss 1.06407\n",
-      "iter_dt 18.17ms; iter 100: train loss 0.14712\n",
-      "iter_dt 18.70ms; iter 200: train loss 0.05315\n",
-      "iter_dt 19.65ms; iter 300: train loss 0.04404\n",
-      "iter_dt 31.64ms; iter 400: train loss 0.04724\n",
-      "iter_dt 18.43ms; iter 500: train loss 0.02521\n",
-      "iter_dt 19.83ms; iter 600: train loss 0.03352\n",
-      "iter_dt 19.58ms; iter 700: train loss 0.00539\n",
-      "iter_dt 18.72ms; iter 800: train loss 0.02057\n",
-      "iter_dt 18.26ms; iter 900: train loss 0.00360\n",
-      "iter_dt 18.50ms; iter 1000: train loss 0.00788\n",
-      "iter_dt 20.64ms; iter 1100: train loss 0.01162\n",
-      "iter_dt 18.63ms; iter 1200: train loss 0.00963\n",
-      "iter_dt 18.32ms; iter 1300: train loss 0.02066\n",
-      "iter_dt 18.40ms; iter 1400: train loss 0.01739\n",
-      "iter_dt 18.37ms; iter 1500: train loss 0.00376\n",
-      "iter_dt 18.67ms; iter 1600: train loss 0.00133\n",
-      "iter_dt 18.38ms; iter 1700: train loss 0.00179\n",
-      "iter_dt 18.66ms; iter 1800: train loss 0.00079\n",
-      "iter_dt 18.48ms; iter 1900: train loss 0.00042\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start due to an error with the 'pyzmq' module. Consider re-installing this module.\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresPyzmq'>here</a> for more info."
      ]
     }
    ],
@@ -212,9 +211,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start due to an error with the 'pyzmq' module. Consider re-installing this module.\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresPyzmq'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "# now let's perform some evaluation\n",
     "model.eval();"
@@ -222,15 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train final score: 5000/5000 = 100.00% correct\n",
-      "test final score: 5000/5000 = 100.00% correct\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start due to an error with the 'pyzmq' module. Consider re-installing this module.\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresPyzmq'>here</a> for more info."
      ]
     }
    ],
@@ -271,17 +281,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "input sequence  : [[0, 0, 2, 1, 0, 1]]\n",
-      "predicted sorted: [[0, 0, 0, 1, 1, 2]]\n",
-      "gt sort         : [0, 0, 0, 1, 1, 2]\n",
-      "matches         : True\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start due to an error with the 'pyzmq' module. Consider re-installing this module.\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresPyzmq'>here</a> for more info."
      ]
     }
    ],
@@ -317,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4,
   "vscode": {
